[workspace]
members = ["crates/haul-core", "crates/haul-cli"]
resolver = "2"

[workspace.dependencies]
iroh = "1.0"
iroh-blobs = "0.103"
iroh-docs = "0.101"
iroh-gossip = "0.101"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
bs58 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
serde_json = "1"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
walkdir = "2"
futures-util = "0.3"
