[package]
name = "haul-cli"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[[bin]]
name = "haul"
path = "src/main.rs"

[dependencies]
haul-core = { path = "../haul-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
