[package]
name = "haul-core"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

[dependencies]
iroh = { workspace = true }
iroh-blobs = { workspace = true }
iroh-docs = { workspace = true }
iroh-gossip = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
bs58 = { workspace = true }
chacha20poly1305 = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
directories = { workspace = true }
walkdir = { workspace = true }
futures-util = { workspace = true }
